# engenie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
Engenie-App/: CMakeLists.txt  build.sh  run.sh
Engenie-App/resources/models/: cube.dae  suzanne.dae  triangle.dae
Engenie-App/resources/shaders/: min_fragment.glsl  min_vertex.glsl  vertex.glsl
Engenie-App/src/: main.cpp
Engenie-Core/: CMakeLists.txt  build.sh
Engenie-Core/engenie-headers/engenie/: camera.hpp  engenie.hpp  entity.hpp  mesh.hpp  shader.hpp  world.hpp
Engenie-Core/engenie-headers/engenie/component/: component.hpp  testcomponent.hpp
Engenie-Core/engenie-headers/engenie/event/: keyevent.hpp
Engenie-Core/engenie-headers/engenie/layer/: layer.hpp  layerstack.hpp
Engenie-Core/engenie-headers/engenie/math/: transform.hpp
Engenie-Core/src/engenie/: camera.cpp  entity.cpp  mesh.cpp  shader.cpp  unnamedEngine.cpp  window.cpp
Engenie-Core/src/engenie/component/: componentmanager.cpp  renderablecomponent.cpp
Engenie-Core/src/engenie/layer/: layerstack.cpp
Engenie-Core/src/engenie/math/: math.cpp  transform.cpp
include/: shader.h
include/engenie/: camera.hpp  engenie.hpp  material.hpp
include/glad/: glad.h
include/unnamedEngine/: camera.hpp  commons.hpp  entity.hpp  material.hpp  mesh.hpp  shader.hpp  unnamedEngine.hpp  window.hpp  world.hpp
resources/models/: cube.dae  suzanne.dae
resources/shaders/: fragment.glsl  min_vertex.glsl  vertex.glsl
src/: glad.c  main.cpp
src/engenie/: camera.cpp  world.cpp
unnamedEngine/: unnamedEngine.cpp  window.cpp
(+137 files in other folders)
